
优化：优化MSCH模型模板
优化：优化jwt的缓存配置
优化：优化jwt拦截器返回值
优化：优化upms的接口地址
修复：修复mgrdb、meta和upms配置交叉问题
修复：修复代码生成器sysconfig、meta同时运行的冲突问题

-----------------------------
lambkit-0.2-alpha2：

新增：增加Msch工具类，简化生成器代码
新增：增加支持ActiveMQ消息功能
新增：增加支持Redis集群
新增：增加支持Kafka消息功能
新增：增加支持HBase功能
新增：增加支持Hadoop-hdfs文件管理功能
优化：优化jwt参数配置方式
优化：优化启动入口,改由LambkitApplication启动，启动配置改由Application
优化：优化SystemInfo为LambkitInfo是框架内部运行信息,位置移动到com.lambkit.common
优化：优化将数据库和表格信息的采集和存储方式（DbWrapper、TableWrapper）
优化：优化内部api管理功能，后续还待完善
删除：删除DevelopModule，改用LmsModule
删除：删除部分未实现的类
删除：删除com.lambkit.system包，更改为com.lambkit.common.monitor监控
删除：删除com.lambkit.core.http.api，更改为com.lambkit.core.api外部Api接口管理

-----------------------------
lambkit-0.2-alpha1：

新增：保留原server中的AppServer，更改为DefaultApplication。
新增：增加jwt权限管理机制JwtKit，查看com.lambkit.plugin.jwt。
新增：增加网易云信im服务端操作工具NimKit，查看com.lambkit.plugin.nim。
新增：增加网易云信短信服务工具NimMessageKit，查看com.lambkit.plugin.nim。
新增：UpmsUserRoleService的hasRole方法
新增：BaseController的getParameterMap、getParaToDouble和getParaToFloat方法
新增：MSCH模型，结合代码生成器和MSCH模板生成lambkit最佳实践代码。
优化：升级JFianl到3.8。
优化：优化启动方式，默认使用Undertow。
优化：BaseModel增加setAttrs方法可以接收kv和json数据。
优化：DefaultModule中setJsonFactory(new MixJsonFactory());
优化：优化代码生成器Generator，方便使用，减少代码量。
优化：优化自动注册Module、Controller、Tag的机制。
优化：优化DevelopModule的位置，放到DefaultJFinalConfig，防止二次开发因缺少数据库而出错。
优化：优化微服务网关功能。
移除：删除com.lambkit.server及相关内容。

-----------------------------
lambkit-0.1-alpha4：

新增：增加meta的管理Controller，新增“com.lambkit.module.meta.web.controller.manage”包。
新增：增加meta页面，webapp/lambkit/mgrdb/dev/meta
新增：增加jwt权限管理机制JwtKit，查看com.lambkit.plugin.jwt。
新增：增加网易云信im服务端操作工具NimKit，查看com.lambkit.plugin.nim。
新增：增加网易云信短信服务工具NimMessageKit，查看com.lambkit.plugin.nim。
修复：修改RpcKit"检测端口占用"功能使用不当导致的service无法注册问题。

-----------------------------
lambkit-0.1-alpha3：

新增：添加BaseModel中相关Example的方法。
新增：Model中加入***Criteria快速创建方法，可隐藏***Criteria。
新增：增加UpmsManager自动判断注册本地或远程service函数，增加apiservice获取函数。
修复：修改Dialect中Example组合SQL错误，更改Example相关方法。
修复：修改Dialect中Example组合SQL的in逻辑返回为空错误。