@@ -60,7 +60,7 @@ public class UpmsEmbeddedModule extends LambkitModule {
 		// TODO Auto-generated method stub
 		super.configMapping(name, arp);
 		UpmsConfig config = Lambkit.config(UpmsConfig.class);
-		System.out.println("mapping name: " + name + ", this config is " + config.getDbconfig());
+		System.out.println("Upms mapping name: " + name + ", this config is " + config.getDbconfig());
 		if(StrKit.notBlank(name) && name.equals(config.getDbconfig())) {
 			UpmsManager.me().mapping(arp);
 		}
