@@ -1,11 +1,14 @@
 lambkit.version=0.2-alpha1
 lambkit.mode=dev
-lambkit.lmsActived=true
 lambkit.autoRegisterModulePackages=
 lambkit.autoRegisterControllerPackages=
 lambkit.autoRegisterTagPackages=
 lambkit.autoRegisterEventPackages=
 lambkit.autoRegisterServicePackages=
+
+lambkit.module.lms.enable=true
+lambkit.module.lms.controllerKey=
+lambkit.module.lms.viewPath=
 
 #-----------------------
 #web
@@ -55,14 +58,14 @@ lambkit.mgrdb.type=meta
 lambkit.mgrdb.tableRemovePrefixes = cms_
 
 #ehcache plugin config
-lambkit.component.ehcache.addin=true
+lambkit.component.ehcache.enable=true
 #redis plugin config
-lambkit.component.redis.addin=true
+lambkit.component.redis.enable=true
 lambkit.component.redis.address=127.0.0.1
 lambkit.component.redis.password=
 lambkit.component.redis.database=myredis
 #zbus plugin config
-lambkit.component.zbus.addin=
+lambkit.component.zbus.enable=
 lambkit.component.zbus.address=
 
 #type default ehcache(support:ehcache,redis)
@@ -84,7 +87,7 @@ lambkit.rpc.callMode=redirect
 lambkit.rpc.directUrl=127.0.0.1:8002
 
 #swagger
-lambkit.component.swagger.addin=
+lambkit.component.swagger.enable=
 lambkit.component.swagger.url=
 lambkit.component.swagger.path=
 lambkit.component.swagger.basepackage = com.lambkit
