@@ -3,6 +3,9 @@
 优化：优化jwt的缓存配置
 优化：优化jwt拦截器返回值
 优化：优化upms的接口地址
+优化：更改addin配置名称为enable
+优化：优化Ehcache的path自定义功能
+优化：优化Lms启用配置，增加地址配置功能
 修复：修复mgrdb、meta和upms配置交叉问题
 修复：修复代码生成器sysconfig、meta同时运行的冲突问题
 
